# gonetworkapp

./: .env.tauri  .eslintrc.json  .gitattributes  .gitignore  .projetos-teste.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORREÇÃO_TIMELINE_COMPLETA.md  CORREÇÕES_FINAIS_COMPLETAS.md  CORREÇÕES_NEXTJS_15_COMPLETAS.md  INTEGRATION_FINAL_REPORT.md  LICENSE  PWA_IMPLEMENTATION_COMPLETE.md  README.md  README_Copilot.md  RELATÓRIO_RESOLUÇÃO_BOTÃO_TIMELINE.md  RESOLUCAO_TIMELINE_FINAL.md  RESOLUÇÃO_BOTÃO_TIMELINE.md  TAURI_IMPLEMENTATION_FINAL_REPORT.md  TAURI_STATUS_AVANCADO.md  TIMELINE_IMPROVEMENTS_DOCUMENTATION.md  TIMELINE_INTEGRATION_FINAL_REPORT.md  aplicar-electron.md  build-tauri.sh  caminhas-eventos-antigos-errados.md  correcoes_criticas.md  create-test-data.js  debug-frontend-timeline.js  diagnose-problem.js  diagnostico-completo-fluxo-2.js  diagnostico-completo-fluxo.js  final-checklist.js  final-integration-report.js  fix-api-routes.sh  fix-lint.ps1  fix-lint.sh  git-commit-push.bat  git-commit-push.sh  iniciar.bat  next.config.mjs  (+38 more)
.history/: .eslintignore_20250527045148  .eslintrc_20250527042105.json  .eslintrc_20250527070345.json  .prettierignore_20250527045013  CORREÇÕES_FINAIS_COMPLETAS_20250526233133.md  CORREÇÕES_NEXTJS_15_COMPLETAS_20250526225156.md  CORREÇÕES_NEXTJS_15_E_TIMELINE_FINAL_20250526230346.md  CORREÇÕES_NEXTJS_15_E_TIMELINE_FINAL_20250526230354.md  CORREÇÕES_NEXTJS_15_E_TIMELINE_FINAL_COMPLETAS_20250526231830.md  (+47 more)
app/: layout.tsx  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.backup
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+811 files in other folders)
