[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "shell-open", "fs-read-dir", "window-unminimize", "process-exit", "window-show", "fs-copy-file", "window-set-position", "window-hide", "window-set-focus", "window-close", "dialog-open", "clipboard-all", "path-all", "notification-all", "window-start-dragging", "fs-remove-file", "process-relaunch", "window-minimize", "dialog-message", "fs-write-file", "window-set-fullscreen", "window-unmaximize", "window-set-decorations", "window-set-title", "window-set-size", "window-set-resizable", "os-all", "dialog-ask", "window-maximize", "window-center", "dialog-confirm", "fs-rename-file", "fs-read-file", "fs-remove-dir", "dialog-save", "window-set-always-on-top", "fs-create-dir"] }
hostname = "0.3"
